--- a/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
+++ b/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
@@ -354,7 +354,7 @@ spec:
       hermeto --log-level="$LOG_LEVEL" generate-env "$(workspaces.source.path)/cachi2/output" \
       --format env \
       --for-output-dir=/cachi2/output \
-      --output "$(workspaces.source.path)/cachi2/cachi2.env"
+      --output "$(workspaces.source.path)/cachi2/prefetch.env"
 
       hermeto --log-level="$LOG_LEVEL" inject-files "$(workspaces.source.path)/cachi2/output" \
       --for-output-dir=/cachi2/output
