--- a/task/run-script-oci-ta/0.1/run-script-oci-ta.yaml
+++ b/task/run-script-oci-ta/0.1/run-script-oci-ta.yaml
@@ -176,7 +176,7 @@ spec:
         PREFETCH_SOURCE=""
         if [ -d "/var/workdir/cachi2" ]; then
           PREFETCH_MOUNT="--volume /var/workdir/cachi2:/cachi2"
-          PREFETCH_SOURCE=". /cachi2/cachi2.env &&"
+          PREFETCH_SOURCE=". /cachi2/prefetch.env &&"
         fi
 
         # Create the script file
