Rename cachi2.repo file to more generic prefetch.repo
Skip archived tasks.

Signed-off-by: Michal Šoltis <msoltis@redhat.com>

--- a/task-generator/trusted-artifacts/golden/buildah/base.yaml
+++ b/task-generator/trusted-artifacts/golden/buildah/base.yaml
@@ -212,7 +212,7 @@ spec:
         sed -i 's|^\s*run |RUN . /cachi2/prefetch.env \&\& \\\n    |i' "$dockerfile_path"
         echo "Prefetched content will be made available"
 
-        prefetched_repo_for_my_arch="/tmp/cachi2/output/deps/rpm/$(uname -m)/repos.d/cachi2.repo"
+        prefetched_repo_for_my_arch="/tmp/cachi2/output/deps/rpm/$(uname -m)/repos.d/prefetch.repo"
         if [ -f "$prefetched_repo_for_my_arch" ]; then
           echo "Adding $prefetched_repo_for_my_arch to $YUM_REPOS_D_FETCHED"
           mkdir -p "$YUM_REPOS_D_FETCHED"
