--- a/task-generator/trusted-artifacts/golden/prefetch-dependencies/ta.yaml
+++ b/task-generator/trusted-artifacts/golden/prefetch-dependencies/ta.yaml
@@ -152,11 +152,11 @@ spec:
       --for-output-dir=/cachi2/output
 
       # NOTE: Compatibility hack, hermeto will create a hermeto.repo when processing RPMs (1 for
-      # each architecture) which may break users expecting cachi2.repo
+      # each architecture) which may break users expecting prefetch.repo
       find /var/workdir/cachi2/output \
         -type f \
         -name hermeto.repo \
-        -execdir mv {} cachi2.repo \;
+        -execdir mv {} prefetch.repo \;
 
   - image: quay.io/konflux-ci/build-trusted-artifacts:latest@sha256:resolved
     name: create-trusted-artifact
