--- a/task/validate-fbc/0.1/validate-fbc.yaml
+++ b/task/validate-fbc/0.1/validate-fbc.yaml
@@ -330,8 +330,8 @@ spec:
         mv "$OPM_BINARY" /shared/bin/opm
         export PATH=/shared/bin:$PATH
 
-        # We have 9 total checks
-        check_num=9
+        # We have 10 total checks
+        check_num=10
         failure_num=0
         TESTPASSED=true
 
@@ -339,6 +339,44 @@ spec:
           echo "!FAILURE! - grpc_health_probe binary presence check failed."
           failure_num=$((failure_num + 1))
           TESTPASSED=false
+        fi
+
+        ### FBC DIRECTORY STRUCTURE VALIDATION ###
+        echo "Validating FBC directory structure."
+        PACKAGE_DIRS=$(find ".${conffolder}" -mindepth 1 -maxdepth 1 -type d)
+
+        VALID_STRUCTURE=true
+        if [[ -z "${PACKAGE_DIRS}" ]]; then
+          echo "!FAILURE! - No package subdirectories found inside '.${conffolder}'."
+          VALID_STRUCTURE=false
+        else
+          # Loop through each found package directory
+          while IFS= read -r pkg_dir; do
+            if [[ ! -f "${pkg_dir}/catalog.json" && ! -f "${pkg_dir}/catalog.yaml" && ! -f "${pkg_dir}/catalog.yml" ]]; then
+              echo "!FAILURE! - Package directory '${pkg_dir}' must contain catalog file."
+              VALID_STRUCTURE=false
+              break # One failure is enough to stop checking
+            fi
+          done <<< "${PACKAGE_DIRS}"
+        fi
+
+        if [[ "${VALID_STRUCTURE}" == "false" ]]; then
+          echo "--> The FBC image must contain one or more package directories inside '.${conffolder}',"
+          echo "    and each must contain one of the supported catalog files."
+          echo "    Example valid structure:"
+          echo "    ${conffolder}/"
+          echo "    ├── <package-name-A>/"
+          echo "    │   └── catalog.json"
+          echo "    ├── <package-name-B>/"
+          echo "    │   └── catalog.yaml"
+          echo "    └── <package-name-C>/"
+          echo "        └── catalog.yml"
+          
+          note="FBC directory structure validation failed. Check logs for details."
+          failure_num=$((failure_num + 1))
+          TESTPASSED=false
+        else
+          echo "FBC directory structure is valid."
         fi
 
         if ! opm validate ."${conffolder}"; then
