--- a/pipelines/docker-build/docker-build.yaml
+++ b/pipelines/docker-build/docker-build.yaml
@@ -82,6 +82,12 @@ spec:
       VMs
     name: privileged-nested
     type: string
+  - default: ""
+    description: Directories or files to be excluded from Snyk scan (Comma-separated).
+      In case multiple components are maintained in a single git repository,
+      Snyk Code is unable to distinguish which directories contain the source code for which component.
+    name: snyk-ignore-file-paths
+    type: string
   results:
   - name: IMAGE_URL
     value: $(tasks.build-image-index.results.IMAGE_URL)
@@ -280,6 +286,8 @@ spec:
       value: $(tasks.build-image-index.results.IMAGE_DIGEST)
     - name: image-url
       value: $(tasks.build-image-index.results.IMAGE_URL)
+    - name: IGNORE_FILE_PATHS
+      value: $(params.snyk-ignore-file-paths)
     runAfter:
     - build-image-index
     taskRef:
