task: add wait-for-pipelinerun-image task

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -33,6 +33,7 @@
 /task/update-deployment                     @konflux-ci/build-maintainers
 /task/update-infra-deployments              @konflux-ci/build-maintainers
 /task/upload-sbom-to-trustification         @konflux-ci/build-maintainers @Allda @jedinym
+/task/wait-for-pipelinerun-image            @konflux-ci/build-maintainers @JasonPowr
 
 # renovate groupName=build-prefetch
 /task/prefetch-dependencies         @konflux-ci/build-maintainers @a-ovchinnikov @brunoapimentel @eskultety @taylormadore
