ci: yaml lint and codeowners

--- a/renovate.json
+++ b/renovate.json
@@ -65,7 +65,8 @@
         "task/summary/**",
         "task/update-deployment/**",
         "task/update-infra-deployments/**",
-        "task/upload-sbom-to-trustification/**"
+        "task/upload-sbom-to-trustification/**",
+        "task/wait-for-pipelinerun-image/**"
       ]
     },
     {
