--- a/pipelines/docker-build/docker-build.yaml
+++ b/pipelines/docker-build/docker-build.yaml
@@ -69,6 +69,13 @@ spec:
       oci or docker.
     name: buildah-format
     type: string
+  - default: ""
+    description: Directories or files to be excluded from Snyk scan (Comma-separated).
+      In case multiple components are maintained in a single git repository, Snyk
+      Code is unable to distinguish which directories contain the source code for
+      which component.
+    name: snyk-ignore-file-paths
+    type: string
   - default: []
     description: Array of --build-arg values ("arg=value" strings) for buildah
     name: build-args
@@ -81,12 +88,6 @@ spec:
     description: Whether to enable privileged mode, should be used only with remote
       VMs
     name: privileged-nested
-    type: string
-  - default: ""
-    description: Directories or files to be excluded from Snyk scan (Comma-separated).
-      In case multiple components are maintained in a single git repository,
-      Snyk Code is unable to distinguish which directories contain the source code for which component.
-    name: snyk-ignore-file-paths
     type: string
   results:
   - name: IMAGE_URL
@@ -286,8 +287,6 @@ spec:
       value: $(tasks.build-image-index.results.IMAGE_DIGEST)
     - name: image-url
       value: $(tasks.build-image-index.results.IMAGE_URL)
-    - name: IGNORE_FILE_PATHS
-      value: $(params.snyk-ignore-file-paths)
     runAfter:
     - build-image-index
     taskRef:
