--- a/pipelines/template-build/template-build.yaml
+++ b/pipelines/template-build/template-build.yaml
@@ -62,6 +62,13 @@ spec:
         oci or docker.
       type: string
       default: "docker"
+    - default: ""
+      description: Directories or files to be excluded from Snyk scan (Comma-separated).
+        In case multiple components are maintained in a single git repository, Snyk
+        Code is unable to distinguish which directories contain the source code for
+        which component.
+      name: snyk-ignore-file-paths
+      type: string
   tasks:
     - name: init
       params:
