--- a/pipelines/docker-build-oci-ta/docker-build-oci-ta.yaml
+++ b/pipelines/docker-build-oci-ta/docker-build-oci-ta.yaml
@@ -69,6 +69,13 @@ spec:
       oci or docker.
     name: buildah-format
     type: string
+  - default: ""
+    description: Directories or files to be excluded from Snyk scan (Comma-separated).
+      In case multiple components are maintained in a single git repository, Snyk
+      Code is unable to distinguish which directories contain the source code for
+      which component.
+    name: snyk-ignore-file-paths
+    type: string
   - default: []
     description: Array of --build-arg values ("arg=value" strings) for buildah
     name: build-args
