Add snyk ignore paths param
Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

--- a/pipelines/docker-build-oci-ta/patch.yaml
+++ b/pipelines/docker-build-oci-ta/patch.yaml
@@ -131,6 +131,11 @@
     value: $(tasks.prefetch-dependencies.results.CACHI2_ARTIFACT)
 - op: remove
   path: /spec/tasks/9/workspaces/0
+- op: add
+  path: /spec/tasks/9/params/4
+  value:
+    name: IGNORE_FILE_PATHS
+    value: $(params.snyk-ignore-paths)
 
 # sast-coverity-check
 - op: test
