--- a/pipelines/docker-build/patch.yaml
+++ b/pipelines/docker-build/patch.yaml
@@ -144,3 +144,8 @@
   value:
     name: BUILD_ARGS_FILE
     value: "$(params.build-args-file)"
+- op: add
+  path: /spec/tasks/9/params/2
+  value:
+    name: IGNORE_FILE_PATHS
+    value: $(params.snyk-ignore-paths)
