--- a/task/git-clone/0.1/git-clone.yaml
+++ b/task/git-clone/0.1/git-clone.yaml
@@ -180,7 +180,7 @@ spec:
         readOnly: true
     script: |
       #!/usr/bin/env sh
-      set -eu
+      set -u
 
       if [ "${PARAM_VERBOSE}" = "true" ] ; then
         set -x
