Set CPU limit for all tasks
We did remove the CPU limits before, the intent was to allow pods to
use available CPU if any but this has side effect of making things
flaky/unpredictable. If a task pod need more CPU than requests and it
gets it, the day it does not due to node being under pressure, things
start to fail.

In addition, we have seen strange behavior when task suddenly gets and
users a lot of CPU, e.g. using way more memory up to getting OOMKilled.

This change is adding back CPU limits where it is not specified, setting
it  equals to requests.

Also standardize the cpu to use double quotes when whole number of CPU
is specified.

Ideally, we will want to set memory and cpu requests equals to limits
so the tekton pods gets guraranteed quality of service but this will be
done in a follow up change, as increasing requests to match limits can
have some side effect such as requiring larger hardware which can be a
problem, especially in the CI.

KONFLUX-10360

Signed-off-by: Hugo Arès <hares@redhat.com>

--- a/task-generator/trusted-artifacts/golden/buildah/ta.yaml
+++ b/task-generator/trusted-artifacts/golden/buildah/ta.yaml
@@ -141,6 +141,7 @@ spec:
     computeResources:
       limits:
         memory: 4Gi
+        cpu: 250m
       requests:
         memory: 512Mi
         cpu: 250m
