--- a/task-generator/trusted-artifacts/golden/source-build/base.yaml
+++ b/task-generator/trusted-artifacts/golden/source-build/base.yaml
@@ -106,6 +106,7 @@ spec:
       computeResources:
         limits:
           memory: 2Gi
+          cpu: 250m
         requests:
           memory: 512Mi
           cpu: 250m
