--- a/task-generator/trusted-artifacts/golden/source-build/ta.yaml
+++ b/task-generator/trusted-artifacts/golden/source-build/ta.yaml
@@ -160,6 +160,7 @@ spec:
         cp "$RESULT_FILE" "$WS_BUILD_RESULT_FILE"
       computeResources:
         limits:
+          cpu: 250m
           memory: 2Gi
         requests:
           cpu: 250m
