--- a/task/build-image-index/0.1/build-image-index.yaml
+++ b/task/build-image-index/0.1/build-image-index.yaml
@@ -83,6 +83,7 @@ spec:
     computeResources:
       limits:
         memory: 4Gi
+        cpu: 250m
       requests:
         memory: 512Mi
         cpu: 250m
@@ -190,6 +191,7 @@ spec:
     computeResources:
       limits:
         memory: 512Mi
+        cpu: 100m
       requests:
         memory: 256Mi
         cpu: 100m
@@ -244,6 +246,7 @@ spec:
     computeResources:
       limits:
         memory: 512Mi
+        cpu: 100m
       requests:
         memory: 256Mi
         cpu: 100m
