--- a/task/build-maven-zip-oci-ta/0.1/build-maven-zip-oci-ta.yaml
+++ b/task/build-maven-zip-oci-ta/0.1/build-maven-zip-oci-ta.yaml
@@ -122,6 +122,7 @@ spec:
         fi
       computeResources:
         limits:
+          cpu: "1"
           memory: 8Gi
         requests:
           cpu: "1"
@@ -165,6 +166,7 @@ spec:
         fi
       computeResources:
         limits:
+          cpu: "1"
           memory: 8Gi
         requests:
           cpu: "1"
@@ -201,6 +203,7 @@ spec:
         fi
       computeResources:
         limits:
+          cpu: 100m
           memory: 512Mi
         requests:
           cpu: 100m
@@ -245,6 +248,7 @@ spec:
         echo -n "${sbom_repo}:${sbom_tag}" | tee "$(results.SBOM_BLOB_URL.path)"
       computeResources:
         limits:
+          cpu: 100m
           memory: 512Mi
         requests:
           cpu: 100m
