--- a/task/build-maven-zip/0.1/build-maven-zip.yaml
+++ b/task/build-maven-zip/0.1/build-maven-zip.yaml
@@ -68,9 +68,10 @@ spec:
     computeResources:
       limits:
         memory: 8Gi
+        cpu: "1"
       requests:
         memory: 2Gi
-        cpu: '1'
+        cpu: "1"
     script: |
       #!/bin/bash
       set -euo pipefail
@@ -106,9 +107,10 @@ spec:
     computeResources:
       limits:
         memory: 8Gi
+        cpu: "1"
       requests:
         memory: 2Gi
-        cpu: '1'
+        cpu: "1"
     script: |
       #!/bin/bash
       set -euo pipefail
@@ -151,6 +153,7 @@ spec:
     computeResources:
       limits:
         memory: 512Mi
+        cpu: 100m
       requests:
         memory: 256Mi
         cpu: 100m
@@ -215,6 +218,7 @@ spec:
     computeResources:
       limits:
         memory: 512Mi
+        cpu: 100m
       requests:
         memory: 256Mi
         cpu: 100m
