--- a/task/build-paketo-builder-oci-ta/0.2/build-paketo-builder-oci-ta.yaml
+++ b/task/build-paketo-builder-oci-ta/0.2/build-paketo-builder-oci-ta.yaml
@@ -379,6 +379,7 @@ spec:
     - computeResources:
         limits:
           memory: 4Gi
+          cpu: 500m
         requests:
           cpu: 500m
           memory: 1Gi
@@ -415,6 +416,7 @@ spec:
     - computeResources:
         limits:
           memory: 512Mi
+          cpu: 100m
         requests:
           cpu: 100m
           memory: 256Mi
@@ -451,6 +453,7 @@ spec:
     - computeResources:
         limits:
           memory: 4Gi
+          cpu: "1"
         requests:
           cpu: "1"
           memory: 1Gi
@@ -548,6 +551,7 @@ spec:
     - computeResources:
         limits:
           memory: 512Mi
+          cpu: 100m
         requests:
           cpu: 100m
           memory: 256Mi
