--- a/task/buildah-oci-ta/0.5/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.5/buildah-oci-ta.yaml
@@ -258,6 +258,7 @@ spec:
   stepTemplate:
     computeResources:
       limits:
+        cpu: "1"
         memory: 4Gi
       requests:
         cpu: "1"
@@ -916,6 +917,7 @@ spec:
         echo "[$(date --utc -Ins)] End build"
       computeResources:
         limits:
+          cpu: "1"
           memory: 8Gi
         requests:
           cpu: "1"
@@ -1113,6 +1115,7 @@ spec:
         echo "[$(date --utc -Ins)] End prepare-sboms"
       computeResources:
         limits:
+          cpu: 100m
           memory: 512Mi
         requests:
           cpu: 100m
@@ -1163,6 +1166,7 @@ spec:
         echo "[$(date --utc -Ins)] End upload-sbom"
       computeResources:
         limits:
+          cpu: 100m
           memory: 512Mi
         requests:
           cpu: 100m
