--- a/task/buildah-remote-oci-ta/0.5/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.5/buildah-remote-oci-ta.yaml
@@ -227,6 +227,7 @@ spec:
   stepTemplate:
     computeResources:
       limits:
+        cpu: "1"
         memory: 4Gi
       requests:
         cpu: "1"
@@ -316,6 +317,7 @@ spec:
     - $(params.ANNOTATIONS[*])
     computeResources:
       limits:
+        cpu: "1"
         memory: 8Gi
       requests:
         cpu: "1"
@@ -1194,6 +1196,7 @@ spec:
     - $(params.ADDITIONAL_BASE_IMAGES[*])
     computeResources:
       limits:
+        cpu: 100m
         memory: 512Mi
       requests:
         cpu: 100m
@@ -1270,6 +1273,7 @@ spec:
     workingDir: /var/workdir
   - computeResources:
       limits:
+        cpu: 100m
         memory: 512Mi
       requests:
         cpu: 100m
