--- a/task/buildah-remote/0.5/buildah-remote.yaml
+++ b/task/buildah-remote/0.5/buildah-remote.yaml
@@ -218,6 +218,7 @@ spec:
   stepTemplate:
     computeResources:
       limits:
+        cpu: "1"
         memory: 4Gi
       requests:
         cpu: "1"
@@ -293,6 +294,7 @@ spec:
     - $(params.ANNOTATIONS[*])
     computeResources:
       limits:
+        cpu: "1"
         memory: 8Gi
       requests:
         cpu: "1"
@@ -1164,6 +1166,7 @@ spec:
     - $(params.ADDITIONAL_BASE_IMAGES[*])
     computeResources:
       limits:
+        cpu: 100m
         memory: 512Mi
       requests:
         cpu: 100m
@@ -1237,6 +1240,7 @@ spec:
     workingDir: $(workspaces.source.path)
   - computeResources:
       limits:
+        cpu: 100m
         memory: 512Mi
       requests:
         cpu: 100m
