--- a/task/buildah/0.5/buildah.yaml
+++ b/task/buildah/0.5/buildah.yaml
@@ -194,9 +194,10 @@ spec:
     computeResources:
       limits:
         memory: 4Gi
+        cpu: "1"
       requests:
         memory: 1Gi
-        cpu: '1'
+        cpu: "1"
     volumeMounts:
     - mountPath: /shared
       name: shared
@@ -258,9 +259,10 @@ spec:
     computeResources:
       limits:
         memory: 8Gi
+        cpu: "1"
       requests:
         memory: 2Gi
-        cpu: '1'
+        cpu: "1"
     env:
     - name: COMMIT_SHA
       value: $(params.COMMIT_SHA)
@@ -973,6 +975,7 @@ spec:
     computeResources:
       limits:
         memory: 512Mi
+        cpu: 100m
       requests:
         memory: 256Mi
         cpu: 100m
@@ -1083,6 +1086,7 @@ spec:
     computeResources:
       limits:
         memory: 512Mi
+        cpu: 100m
       requests:
         memory: 256Mi
         cpu: 100m
