--- a/task/clair-scan/0.2/clair-scan.yaml
+++ b/task/clair-scan/0.2/clair-scan.yaml
@@ -49,6 +49,7 @@ spec:
       computeResources:
         limits:
           memory: 512Mi
+          cpu: 100m
         requests:
           memory: 256Mi
           cpu: 100m
@@ -90,6 +91,7 @@ spec:
       computeResources:
         limits:
           memory: 6Gi
+          cpu: 500m
         requests:
           memory: 2Gi
           cpu: 500m
@@ -197,6 +199,7 @@ spec:
       computeResources:
         limits:
           memory: 2Gi
+          cpu: 100m
         requests:
           memory: 256Mi
           cpu: 100m
