--- a/task/clair-scan/0.3/clair-scan.yaml
+++ b/task/clair-scan/0.3/clair-scan.yaml
@@ -52,6 +52,7 @@ spec:
       computeResources:
         limits:
           memory: 512Mi
+          cpu: 100m
         requests:
           memory: 256Mi
           cpu: 100m
@@ -93,6 +94,7 @@ spec:
       computeResources:
         limits:
           memory: 6Gi
+          cpu: 500m
         requests:
           memory: 2Gi
           cpu: 500m
@@ -234,6 +236,7 @@ spec:
       computeResources:
         limits:
           memory: 2Gi
+          cpu: 100m
         requests:
           memory: 256Mi
           cpu: 100m
