--- a/task/clamav-scan/0.2/clamav-scan.yaml
+++ b/task/clamav-scan/0.2/clamav-scan.yaml
@@ -62,9 +62,10 @@ spec:
       computeResources:
         limits:
           memory: 16Gi
+          cpu: "1"
         requests:
           memory: 2Gi
-          cpu: 1
+          cpu: "1"
       script: |
         #!/usr/bin/env bash
 
@@ -290,6 +291,7 @@ spec:
       computeResources:
         limits:
           memory: 512Mi
+          cpu: 100m
         requests:
           memory: 256Mi
           cpu: 100m
