--- a/task/clamav-scan/0.3/clamav-scan.yaml
+++ b/task/clamav-scan/0.3/clamav-scan.yaml
@@ -64,6 +64,7 @@ spec:
       computeResources:
         limits:
           memory: 8Gi
+          cpu: 500m
         requests:
           memory: 2Gi
           cpu: 500m
@@ -201,6 +202,7 @@ spec:
       computeResources:
         limits:
           memory: 512Mi
+          cpu: 100m
         requests:
           memory: 256Mi
           cpu: 100m
