--- a/task/fbc-fips-check-oci-ta/0.1/fbc-fips-check-oci-ta.yaml
+++ b/task/fbc-fips-check-oci-ta/0.1/fbc-fips-check-oci-ta.yaml
@@ -263,6 +263,7 @@ spec:
         echo "${images_processed_template/\[%s]/[$digests_processed_string]}" >"/tekton/home/images_processed.txt"
       computeResources:
         limits:
+          cpu: "1"
           memory: 8Gi
         requests:
           cpu: "1"
@@ -274,6 +275,7 @@ spec:
     - name: fips-operator-check-step-action
       computeResources:
         limits:
+          cpu: 500m
           memory: 8Gi
         requests:
           cpu: 500m
