--- a/task/fips-operator-bundle-check/0.1/fips-operator-bundle-check.yaml
+++ b/task/fips-operator-bundle-check/0.1/fips-operator-bundle-check.yaml
@@ -30,6 +30,7 @@ spec:
       computeResources:
         limits:
           memory: 8Gi
+          cpu: 500m
         requests:
           memory: 8Gi
           cpu: 500m
@@ -125,6 +126,7 @@ spec:
       computeResources:
         limits:
           memory: 8Gi
+          cpu: 500m
         requests:
           memory: 8Gi
           cpu: 500m
