--- a/task/init/0.2/init.yaml
+++ b/task/init/0.2/init.yaml
@@ -29,6 +29,7 @@ spec:
       computeResources:
         limits:
           memory: 256Mi
+          cpu: 100m
         requests:
           memory: 256Mi
           cpu: 100m
