--- a/task/oci-copy/0.2/oci-copy.yaml
+++ b/task/oci-copy/0.2/oci-copy.yaml
@@ -91,6 +91,7 @@ spec:
       computeResources:
         limits:
           memory: 1Gi
+          cpu: 250m
         requests:
           cpu: 250m
           memory: 512Mi
