--- a/task/push-dockerfile-oci-ta/0.1/push-dockerfile-oci-ta.yaml
+++ b/task/push-dockerfile-oci-ta/0.1/push-dockerfile-oci-ta.yaml
@@ -162,6 +162,7 @@ spec:
         fi
       computeResources:
         limits:
+          cpu: 100m
           memory: 256Mi
         requests:
           cpu: 100m
