--- a/task/push-dockerfile/0.1/push-dockerfile.yaml
+++ b/task/push-dockerfile/0.1/push-dockerfile.yaml
@@ -73,6 +73,7 @@ spec:
     computeResources:
       limits:
         memory: 256Mi
+        cpu: 100m
       requests:
         cpu: 100m
         memory: 256Mi
