--- a/task/run-script-oci-ta/0.1/run-script-oci-ta.yaml
+++ b/task/run-script-oci-ta/0.1/run-script-oci-ta.yaml
@@ -95,6 +95,7 @@ spec:
     computeResources:
       limits:
         memory: 4Gi
+        cpu: "1"
       requests:
         cpu: "1"
         memory: 1Gi
@@ -252,6 +253,7 @@ spec:
       computeResources:
         limits:
           memory: 3Gi
+          cpu: "1"
         requests:
           cpu: "1"
           memory: 3Gi
