--- a/task/sast-coverity-check-oci-ta/0.3/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.3/sast-coverity-check-oci-ta.yaml
@@ -1215,6 +1215,7 @@ spec:
         fi
       computeResources:
         limits:
+          cpu: "4"
           memory: 16Gi
         requests:
           cpu: "4"
