--- a/task/sast-coverity-check/0.3/patch.yaml
+++ b/task/sast-coverity-check/0.3/patch.yaml
@@ -347,9 +347,10 @@
     computeResources:
       limits:
         memory: 16Gi
+        cpu: "4"
       requests:
         memory: 4Gi
-        cpu: 4
+        cpu: "4"
     volumeMounts:
       - name: trusted-ca
         mountPath: "/mnt/trusted-ca"
