--- a/task/sast-coverity-check/0.3/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.3/sast-coverity-check.yaml
@@ -937,9 +937,10 @@ spec:
     workingDir: $(workspaces.source.path)
   - computeResources:
       limits:
+        cpu: "4"
         memory: 16Gi
       requests:
-        cpu: 4
+        cpu: "4"
         memory: 4Gi
     env:
     - name: IMAGE_URL
