--- a/task/sast-snyk-check/0.4/sast-snyk-check.yaml
+++ b/task/sast-snyk-check/0.4/sast-snyk-check.yaml
@@ -87,6 +87,7 @@ spec:
       computeResources:
         limits:
           memory: 6Gi
+          cpu: "1"
         requests:
           cpu: "1"
           memory: 6Gi
@@ -341,6 +342,7 @@ spec:
       computeResources:
         limits:
           memory: 256Mi
+          cpu: 100m
         requests:
           cpu: 100m
           memory: 256Mi
