--- a/task/sast-unicode-check-oci-ta/0.2/sast-unicode-check-oci-ta.yaml
+++ b/task/sast-unicode-check-oci-ta/0.2/sast-unicode-check-oci-ta.yaml
@@ -285,6 +285,7 @@ spec:
         echo "${TEST_OUTPUT:-${ERROR_OUTPUT}}" | tee "$(results.TEST_OUTPUT.path)"
       computeResources:
         limits:
+          cpu: 100m
           memory: 4Gi
         requests:
           cpu: 100m
@@ -332,6 +333,7 @@ spec:
         done
       computeResources:
         limits:
+          cpu: 100m
           memory: 256Mi
         requests:
           cpu: 100m
