--- a/task/sast-unicode-check-oci-ta/0.3/sast-unicode-check-oci-ta.yaml
+++ b/task/sast-unicode-check-oci-ta/0.3/sast-unicode-check-oci-ta.yaml
@@ -283,6 +283,7 @@ spec:
         echo "${TEST_OUTPUT:-${ERROR_OUTPUT}}" | tee "$(results.TEST_OUTPUT.path)"
       computeResources:
         limits:
+          cpu: 100m
           memory: 4Gi
         requests:
           cpu: 100m
@@ -328,6 +329,7 @@ spec:
         done
       computeResources:
         limits:
+          cpu: 100m
           memory: 256Mi
         requests:
           cpu: 100m
