--- a/task/sast-unicode-check/0.2/sast-unicode-check.yaml
+++ b/task/sast-unicode-check/0.2/sast-unicode-check.yaml
@@ -70,6 +70,7 @@ spec:
       computeResources:
         limits:
           memory: 4Gi
+          cpu: 100m
         requests:
           memory: 4Gi
           cpu: 100m
@@ -267,6 +268,7 @@ spec:
       computeResources:
         limits:
           memory: 256Mi
+          cpu: 100m
         requests:
           memory: 256Mi
           cpu: 100m
