--- a/task/sast-unicode-check/0.3/sast-unicode-check.yaml
+++ b/task/sast-unicode-check/0.3/sast-unicode-check.yaml
@@ -68,6 +68,7 @@ spec:
       computeResources:
         limits:
           memory: 4Gi
+          cpu: 100m
         requests:
           memory: 4Gi
           cpu: 100m
@@ -265,6 +266,7 @@ spec:
       computeResources:
         limits:
           memory: 256Mi
+          cpu: 100m
         requests:
           memory: 256Mi
           cpu: 100m
