--- a/task/validate-fbc/0.1/validate-fbc.yaml
+++ b/task/validate-fbc/0.1/validate-fbc.yaml
@@ -66,6 +66,7 @@ spec:
       computeResources:
         limits:
           memory: 256Mi
+          cpu: 100m
         requests:
           cpu: 100m
           memory: 256Mi
@@ -200,6 +201,7 @@ spec:
       computeResources:
         limits:
           memory: 8Gi
+          cpu: "8"
         requests:
           memory: 8Gi
           cpu: "8"
@@ -453,6 +455,7 @@ spec:
       computeResources:
         limits:
           memory: 256Mi
+          cpu: 100m
         requests:
           cpu: 100m
           memory: 256Mi
@@ -475,6 +478,7 @@ spec:
       computeResources:
         limits:
           memory: 256Mi
+          cpu: 100m
         requests:
           cpu: 100m
           memory: 256Mi
