--- a/task-generator/trusted-artifacts/golden/buildah/base.yaml
+++ b/task-generator/trusted-artifacts/golden/buildah/base.yaml
@@ -131,6 +131,7 @@ spec:
     computeResources:
       limits:
         memory: 4Gi
+        cpu: 250m
       requests:
         memory: 512Mi
         cpu: 250m
