--- a/task-generator/trusted-artifacts/golden/git-clone/ta.yaml
+++ b/task-generator/trusted-artifacts/golden/git-clone/ta.yaml
@@ -257,6 +257,7 @@ spec:
       value: $(params.ociArtifactExpiresAfter)
     computeResources:
       limits:
+        cpu: "1"
         memory: 3Gi
       requests:
         cpu: "1"
