--- a/task/apply-tags/0.1/apply-tags.yaml
+++ b/task/apply-tags/0.1/apply-tags.yaml
@@ -36,6 +36,7 @@ spec:
     - name: apply-additional-tags-from-parameter
       resources:
         limits:
+          cpu: 100m
           memory: 256Mi
         requests:
           cpu: 100m
@@ -69,6 +70,7 @@ spec:
     - name: apply-additional-tags-from-image-label
       resources:
         limits:
+          cpu: 100m
           memory: 256Mi
         requests:
           memory: 256Mi
