--- a/task/apply-tags/0.2/apply-tags.yaml
+++ b/task/apply-tags/0.2/apply-tags.yaml
@@ -39,6 +39,7 @@ spec:
     - name: apply-additional-tags-from-parameter
       resources:
         limits:
+          cpu: 100m
           memory: 256Mi
         requests:
           cpu: 100m
@@ -67,6 +68,7 @@ spec:
     - name: apply-additional-tags-from-image-label
       resources:
         limits:
+          cpu: 100m
           memory: 256Mi
         requests:
           memory: 256Mi
