--- a/task/build-image-manifest/0.1/build-image-manifest.yaml
+++ b/task/build-image-manifest/0.1/build-image-manifest.yaml
@@ -85,6 +85,7 @@ spec:
     - $(params.IMAGES[*])
     computeResources:
       limits:
+        cpu: 250m
         memory: 4Gi
       requests:
         cpu: 250m
@@ -190,6 +191,7 @@ spec:
         - SETFCAP
   - computeResources:
       limits:
+        cpu: 100m
         memory: 512Mi
       requests:
         cpu: 100m
@@ -217,6 +219,7 @@ spec:
         --index-manifest-path "$MANIFEST_DATA_FILE" \
   - computeResources:
       limits:
+        cpu: 100m
         memory: 512Mi
       requests:
         cpu: 100m
