--- a/task/build-vm-image/0.1/build-vm-image.yaml
+++ b/task/build-vm-image/0.1/build-vm-image.yaml
@@ -128,6 +128,7 @@ spec:
       computeResources:
         limits:
           memory: 512Mi
+          cpu: 250m
         requests:
           cpu: 250m
           memory: 128Mi
