--- a/task/buildah-min/0.5/buildah-min.yaml
+++ b/task/buildah-min/0.5/buildah-min.yaml
@@ -210,6 +210,7 @@ spec:
   stepTemplate:
     computeResources:
       limits:
+        cpu: "1"
         memory: 2Gi
       requests:
         cpu: 100m
@@ -279,6 +280,7 @@ spec:
     - $(params.ANNOTATIONS[*])
     computeResources:
       limits:
+        cpu: "1"
         memory: 4Gi
       requests:
         cpu: 100m
@@ -981,6 +983,7 @@ spec:
     - $(params.ADDITIONAL_BASE_IMAGES[*])
     computeResources:
       limits:
+        cpu: 100m
         memory: 256Mi
       requests:
         cpu: 10m
@@ -1050,6 +1053,7 @@ spec:
     workingDir: $(workspaces.source.path)
   - computeResources:
       limits:
+        cpu: 100m
         memory: 2Gi
       requests:
         cpu: 100m
