--- a/task/fbc-fips-check/0.1/fbc-fips-check.yaml
+++ b/task/fbc-fips-check/0.1/fbc-fips-check.yaml
@@ -32,9 +32,10 @@ spec:
       computeResources:
         limits:
           memory: 8Gi
+          cpu: "1"
         requests:
           memory: 8Gi
-          cpu: '1'
+          cpu: "1"
       env:
         - name: IMAGE_URL
           value: $(params.image-url)
@@ -260,6 +261,7 @@ spec:
       computeResources:
         limits:
           memory: 8Gi
+          cpu: 500m
         requests:
           memory: 8Gi
           cpu: 500m
