--- a/task/fips-operator-bundle-check-oci-ta/0.1/fips-operator-bundle-check-oci-ta.yaml
+++ b/task/fips-operator-bundle-check-oci-ta/0.1/fips-operator-bundle-check-oci-ta.yaml
@@ -140,6 +140,7 @@ spec:
         echo "${images_processed_template/\[%s]/[$digests_processed_string]}" >/tekton/home/images_processed.txt
       computeResources:
         limits:
+          cpu: 500m
           memory: 8Gi
         requests:
           cpu: 500m
@@ -151,6 +152,7 @@ spec:
     - name: fips-operator-check-step-action
       computeResources:
         limits:
+          cpu: 500m
           memory: 8Gi
         requests:
           cpu: 500m
