--- a/task/git-clone-oci-ta/0.1/git-clone-oci-ta.yaml
+++ b/task/git-clone-oci-ta/0.1/git-clone-oci-ta.yaml
@@ -374,6 +374,7 @@ spec:
           value: $(params.ociArtifactExpiresAfter)
       computeResources:
         limits:
+          cpu: "1"
           memory: 3Gi
         requests:
           cpu: "1"
