--- a/task/pnc-prebuild-git-clone-oci-ta/0.1/pnc-prebuild-git-clone-oci-ta.yaml
+++ b/task/pnc-prebuild-git-clone-oci-ta/0.1/pnc-prebuild-git-clone-oci-ta.yaml
@@ -358,7 +358,7 @@ spec:
         cpu: 300m
         memory: 512Mi
       requests:
-        cpu: 10m
+        cpu: 300m
         memory: 512Mi
     env:
     - name: BUILD_SCRIPT
@@ -377,6 +377,7 @@ spec:
     - $(results.SOURCE_ARTIFACT.path)=/var/workdir/source
     computeResources:
       limits:
+        cpu: "1"
         memory: 3Gi
       requests:
         cpu: "1"
