--- a/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
+++ b/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
@@ -112,8 +112,9 @@ spec:
     computeResources:
       limits:
         memory: 3Gi
+        cpu: "1"
       requests:
-        cpu: '1'
+        cpu: "1"
         memory: 3Gi
     script: |
       #!/bin/bash
