--- a/task/sast-shell-check/0.1/sast-shell-check.yaml
+++ b/task/sast-shell-check/0.1/sast-shell-check.yaml
@@ -244,6 +244,7 @@ spec:
       computeResources:
         limits:
           memory: 256Mi
+          cpu: 100m
         requests:
           memory: 256Mi
           cpu: 100m
