--- a/task/source-build/0.3/source-build.yaml
+++ b/task/source-build/0.3/source-build.yaml
@@ -178,6 +178,7 @@ spec:
       computeResources:
         limits:
           memory: 2Gi
+          cpu: 250m
         requests:
           memory: 512Mi
           cpu: 250m
