Set CPU limit for prefetch task
We have seen strange behavior where prefetch memory consumption is
abnormally high when CPU is unlimited and this leads to the pod being
OOMKilled. This was observed with golang backend only so far.

Setting the cpu limit brought back memory usage under the 3Gi limit
during our experimentations so setting it on the task, to avoid setting
this in every tenant pipeline.

KONFLUX-10360

Signed-off-by: Hugo Arès <hares@redhat.com>

--- a/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
+++ b/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
@@ -111,6 +111,10 @@ spec:
         name: activation-key
     computeResources:
       limits:
+        # We have seen strange behavior where prefetch memory consumption is
+        # abnormally high when CPU is unlimited and that lead to the pods being
+        # OOMKilled. This was observed with golang backend only so far.
+        cpu: '1'
         memory: 3Gi
       requests:
         cpu: '1'
