--- a/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
@@ -442,6 +442,7 @@ spec:
         fi
       computeResources:
         limits:
+          cpu: "1"
           memory: 3Gi
         requests:
           cpu: "1"
