--- a/task/buildah-oci-ta/0.5/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.5/buildah-oci-ta.yaml
@@ -4,6 +4,7 @@ kind: Task
 metadata:
   name: buildah-oci-ta
   annotations:
+    build.appstudio.redhat.com/expires-on: "2025-12-11T00:00:00Z"
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
